[tool.poetry]
name = "crispy-forms-govuk"
version = "0.1.0"
description = "Django Crispy Forms with a GOV.UK Design System."
authors = ["Ciaran McCormick <ciaranmccormick@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.7"
django-crispy-forms = "~2.1"

[tool.poetry.dev-dependencies]
beautifulsoup4 = "^4.9.3"
black = "^21.6b0"
django-debug-toolbar = "^2.2.0"
flake8 = "^3.8.4"
flake8-pytest-style = "^1.3"
ipdb = "^0.13.4"
ipython = "^7.20.0"
isort = "^5.7.0"
lxml = "^4.6.0"
m2r2 = "^0.2"
mypy = "^1.7.0"
pytest = "^6.2"
pytest-cov = "^2.11"
pytest-django = "^4.4.0"
pytest-sugar = "^0.9.0"
tomlkit = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
